# project2_2_1.9.2017

./: README.md
CSV_Vidrilo_3seq/: CMakeLists.txt  ImageTags.cpp  ImageTags.h  Node.cpp  Node.h  arquit.txt  main.cpp
CSV_Vidrilo_3seq/fileMethods/: fileMethods.cpp  fileMethods.h
try/: libre.py  read_file.py  sequence1visual1.txt  sequence1visual2.txt  sequence1visual3.txt  try.py
